sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value i
	while(i+ecart<getNombreValeurs()) {
              ^AlgCombSort:10: error: not found: value i
		if(getValeur(i+ecart) < getValeur(i))
                             ^AlgCombSort:11: error: not found: value i
			echange(i+ecart,i);
                                ^